@@ -116,10 +116,10 @@ jpackage {
     input = "build/libs"
     destination = "${projectDir}/build/jpackage"
     mainJar = "Stirling-PDF-${project.version}.jar"
-    appName = "Stirling-PDF"
+    appName = "Stirling PDF"
     appVersion = project.version
 //    appVersion = "2005.45.1"
-    vendor = "Stirling-Software"
+    vendor = "Stirling PDF Inc"
     appDescription = "Stirling PDF - Your Local PDF Editor"
     icon = "src/main/resources/static/favicon.ico"
     verbose = true
@@ -151,7 +151,7 @@ jpackage {
         winShortcutPrompt = true  // Lets user choose whether to create shortcuts
         winDirChooser = true  // Allows users to choose installation directory
         winPerUserInstall = false
-        winMenuGroup = "Stirling Software"
+        winMenuGroup = "Stirling PDF"
         winUpgradeUuid = "2a43ed0c-b8c2-40cf-89e1-751129b87641" // Unique identifier for updates
         winHelpUrl = "https://github.com/Stirling-Tools/Stirling-PDF"
         winUpdateUrl = "https://github.com/Stirling-Tools/Stirling-PDF/releases"
@@ -164,8 +164,8 @@ jpackage {
         appVersion = getMacVersion(project.version.toString())
         icon = "src/main/resources/static/favicon.icns"
         type = "dmg"
-        macPackageIdentifier = "Stirling-PDF"
-        macPackageName = "Stirling-PDF"
+        macPackageIdentifier = "Stirling PDF"
+        macPackageName = "Stirling PDF"
         macAppCategory = "public.app-category.productivity"
         macSign = false // Enable signing
         macAppStore = false // Not targeting App Store initially
@@ -249,18 +249,32 @@ tasks.register('jpackageMacX64') {
 
         def result = exec {
             commandLine 'jpackage',
-                    '--type', 'dmg',
-                    '--name', 'Stirling-PDF (x86_64)',
-                    '--input', 'build/libs',
-                    '--main-jar', "Stirling-PDF-${project.version}.jar",
-                    '--main-class', 'org.springframework.boot.loader.launch.JarLauncher',
-                    '--runtime-image', file(jrePath + "/zulu-17.jre/Contents/Home"),
-                    '--dest', 'build/jpackage/x86_64',
-                    '--icon', 'src/main/resources/static/favicon.icns',
-                    '--app-version', getMacVersion(project.version.toString()),
-                    '--mac-package-name', 'Stirling-PDF (x86_64)',
-                    '--mac-package-identifier', 'Stirling-PDF (x86_64)',
-                    '--mac-app-category', 'public.app-category.productivity'
+                '--type', 'dmg',
+                '--name', 'Stirling PDF (x86_64)',
+                '--input', 'build/libs',
+                '--main-jar', "Stirling-PDF-${project.version}.jar",
+                '--main-class', 'org.springframework.boot.loader.launch.JarLauncher',
+                '--runtime-image', file(jrePath + "/zulu-17.jre/Contents/Home"),
+                '--dest', 'build/jpackage/x86_64',
+                '--icon', 'src/main/resources/static/favicon.icns',
+                '--app-version', getMacVersion(project.version.toString()),
+                '--mac-package-name', 'Stirling PDF (x86_64)',
+                '--mac-package-identifier', 'Stirling PDF (x86_64)',
+                '--mac-app-category', 'public.app-category.productivity',
+
+                // Java options
+                '--java-options', '-DBROWSER_OPEN=true',
+                '--java-options', '-DSTIRLING_PDF_DESKTOP_UI=true',
+                '--java-options', '-Djava.awt.headless=false',
+                '--java-options', '-Dapple.awt.UIElement=true',
+                '--java-options', '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--java-options', '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
+                '--java-options', '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
+                '--java-options', '--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED',
+                '--java-options', '--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED',
+                '--java-options', '--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED',
+                '--java-options', '--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED'
+
             standardOutput = outputStream
             errorOutput = errorStream
             ignoreExitValue = true
@@ -365,7 +379,7 @@ spotless {
     java {
         target project.fileTree('src').include('**/*.java')
 
-        googleJavaFormat("1.25.2").aosp().reorderImports(false)
+        googleJavaFormat("1.26.0").aosp().reorderImports(false)
 
         importOrder("java", "javax", "org", "com", "net", "io", "jakarta", "lombok", "me", "stirling")
         toggleOffOn()
@@ -423,7 +437,7 @@ dependencies {
     }
 
     //security updates
-    implementation "org.springframework:spring-webmvc:6.2.5"
+    implementation "org.springframework:spring-webmvc:6.2.6"
 
     implementation("io.github.pixee:java-security-toolkit:1.2.1")
 
@@ -447,7 +461,7 @@ dependencies {
         implementation "org.springframework.boot:spring-boot-starter-oauth2-client:$springBootVersion"
 
         implementation "org.springframework.session:spring-session-core:3.4.2"
-        implementation "org.springframework:spring-jdbc:6.2.5"
+        implementation "org.springframework:spring-jdbc:6.2.6"
 
         implementation 'com.unboundid.product.scim2:scim2-sdk-client:2.3.5'
         // Don't upgrade h2database
@@ -523,7 +537,7 @@ dependencies {
     implementation "org.commonmark:commonmark-ext-gfm-tables:0.24.0"
     // https://mvnrepository.com/artifact/com.bucket4j/bucket4j_jdk17
     implementation "com.bucket4j:bucket4j_jdk17-core:8.14.0"
-    implementation "com.fathzer:javaluator:3.0.5"
+    implementation "com.fathzer:javaluator:3.0.6"
 
     implementation 'com.vladsch.flexmark:flexmark-html2md-converter:0.64.8'
 
